@@ -3,7 +3,7 @@
 # This file contains procedures that change the color palette used
 # by Tk.
 #
-# RCS: @(#) $Id: palette.tcl,v 1.8.2.1 2006/01/25 18:21:41 dgp Exp $
+# RCS: @(#) $Id: palette.tcl,v 1.8.2.2 2006/03/17 10:50:11 patthoyts Exp $
 #
 # Copyright (c) 1995-1997 Sun Microsystems, Inc.
 #
@@ -173,7 +173,7 @@ proc ::tk::RecolorTree {w colors} {
 	set option -[string tolower $dbOption]
 	set class [string replace $dbOption 0 0 [string toupper \
 		[string index $dbOption 0]]]
-	if {![catch {$w config $option} value]} {
+	if {![catch {$w configure $option} value]} {
 	    # if the option database has a preference for this
 	    # dbOption, then use it, otherwise use the defaults
 	    # for the widget.
